feat: Implement Novedades (Blog) with comments, admin approval, rich text editor, and Dockerize application
- Implemented a 'Novedades' (Blog) feature with:
  - Backend API for CRUD operations (admin) and public access.
  - Frontend pages for listing and viewing individual news items.
  - Markdown rich text editor in the admin panel for content creation.
  - ReactMarkdown for rendering rich content on the public pages.

- Implemented a comment system for 'Novedades' and 'About Us' pages:
  - Backend API for creating and retrieving comments with nested replies.
  - Admin approval mechanism for comments (PENDING, APPROVED, REJECTED status).
  - Frontend components for displaying comments and submitting new ones.

- Dockerized the entire application:
  - Created Dockerfiles for frontend (React/Nginx) and backend (Node.js).
  - Configured docker-compose.yml to orchestrate frontend, backend, MySQL database, and Prisma Studio.
  - Mapped host ports starting from 6090 for all services.
  - Updated frontend API client to connect to backend service within Docker network using environment variables.

- Addressed various bugs and type errors:
  - Fixed navigation issue for product detail page from product listings.
  - Corrected API endpoint URL duplication for comments.
  - Resolved TypeScript errors related to 'Tenant', 'Order', and 'OrderItem' types during frontend build.
  - Fixed 'Empresa' information not loading on homepage by refactoring to use 'Tenant' information.
  - Corrected 'Admin Novedades' page not rendering (white screen) by creating the necessary frontend page and modal, and linking it in the admin sidebar and routes.

- Improved environment variable management for Docker deployment with a consolidated .env.production file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "6091:5000"
-    env_file:
-      - ./docker.env
+    env_file: .env.production
     environment:
-      - DATABASE_URL=mysql://user:password@db:3306/websistemajugos
+      - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
     depends_on:
       - db
-    volumes:
-      - ./backend:/app # For development, sync local changes
-      - /app/node_modules # Don't sync local node_modules
     networks:
       - app-network
 
@@ -33,9 +29,6 @@ services:
       - VITE_API_PATH=/api
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app # For development, sync local changes
-      - /app/node_modules # Don't sync local node_modules
     networks:
       - app-network
 
@@ -43,11 +36,7 @@ services:
     image: mysql:8.0
     ports:
       - "6092:3306"
-    environment:
-      - MYSQL_DATABASE=websistemajugos
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=password
-      - MYSQL_ROOT_PASSWORD=rootpassword
+    env_file: .env.production
     volumes:
       - db-data:/var/lib/mysql
     networks:
@@ -60,8 +49,9 @@ services:
       - ./backend:/app
     ports:
       - "6093:5555"
+    env_file: .env.production
     environment:
-      - DATABASE_URL=mysql://user:password@db:3306/websistemajugos
+      - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
     command: npx prisma studio --port 5555
     depends_on:
       - db
