refactor(backend): Improve subdomain detection logic
- Implemented a more robust subdomain detection mechanism in tenantMiddleware.
- It now uses an APP_DOMAIN environment variable to reliably distinguish the tenant subdomain from the main domain (e.g., 'subdomain.example.com' vs 'example.com').
- This makes the tenant resolution more flexible and less prone to errors with different domain structures.

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,9 @@
 # Production Environment Variables for Docker/Portainer
 # ===================================================
 
+# --- Domain Settings ---
+APP_DOMAIN=jugueria.techinnovats.com
+
 # --- Database Settings ---
 # You can change these values, but make sure they are consistent.
 # Use strong, secure passwords in your actual deployment.
