--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 # Production Environment Variables for Docker/Portainer
 # ===================================================
 
+# --- Domain Settings ---
+APP_DOMAIN=jugueria.techinnovats.com
+
 # --- Database Settings ---
 # You can change these values, but make sure they are consistent.
 # Use strong, secure passwords in your actual deployment.
