--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker-compose.yml
 version: '3.8'
 
 services:
@@ -7,12 +8,19 @@ services:
       dockerfile: Dockerfile
     ports:
       - "6091:5000"
-    # CORRECCIÓN 1: Usar el archivo .env local
-    env_file: .env
+    # Las variables se cargarán desde el .env en la raíz
     environment:
-      # CORRECCIÓN 2: Construir la URL dinámicamente usando las variables del .env
-      # Esto asegura que si cambias la contraseña en el .env, se actualice aquí también.
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
+      - APP_DOMAIN=${APP_DOMAIN}
+      - JWT_SECRET=${JWT_SECRET}
+      - ALLOWED_PROVISIONING_IPS=${ALLOWED_PROVISIONING_IPS}
+      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+      - RESEND_API_KEY=${RESEND_API_KEY}
+      - EMAIL_FROM=${EMAIL_FROM}
+      - DEMO_TENANT_SUBDOMAIN=${DEMO_TENANT_SUBDOMAIN}
+      - PROVISIONING_API_KEY=${PROVISIONING_API_KEY}
     depends_on:
       - db
     networks:
@@ -24,11 +32,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "6090:80"
+    # Estas variables son para el build de la imagen de frontend
     environment:
-      - VITE_API_PROTOCOL=http
-      - VITE_API_HOST=backend # Esto está bien, usa el nombre del servicio interno
-      - VITE_API_PORT=5000
-      - VITE_API_PATH=/api
+      - VITE_API_PROTOCOL=${VITE_API_PROTOCOL}
+      - VITE_API_HOST=${VITE_API_HOST}
+      - VITE_API_PORT=${VITE_API_PORT}
+      - VITE_API_PATH=${VITE_API_PATH}
     depends_on:
       - backend
     networks:
@@ -38,8 +47,12 @@ services:
     image: mysql:8.0
     ports:
       - "6092:3306"
-    # CORRECCIÓN 1: Usar el archivo .env local
-    env_file: .env
+    # Las variables de la base de datos se cargan desde el .env
+    environment:
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
       - db-data:/var/lib/mysql
     networks:
@@ -52,8 +65,6 @@ services:
       - ./backend:/app
     ports:
       - "6093:5555"
-    # CORRECCIÓN 1: Usar el archivo .env local
-    env_file: .env
     environment:
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
     command: npx prisma studio --port 5555
@@ -68,3 +79,4 @@ networks:
 
 volumes:
   db-data:
+
