--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: '3.8'
 
 services:
@@ -11,6 +10,10 @@ services:
     environment:
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
       - APP_DOMAIN=${APP_DOMAIN}
+      - JWT_SECRET=${JWT_SECRET}
+      - RESEND_API_KEY=${RESEND_API_KEY}
+      - EMAIL_FROM=${EMAIL_FROM}
+      - PROVISIONING_API_KEY=${PROVISIONING_API_KEY}
     depends_on:
       - db
     networks:
@@ -22,11 +25,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "6090:80"
-    environment:
-      - VITE_API_PROTOCOL=https
-      - VITE_API_HOST=jugueria.techinnovats.com
-      - VITE_API_PORT=443
-      - VITE_API_PATH=/api
+    # No environment variables needed here anymore as they are baked in during build
+    # or handled by nginx proxying to the relative /api path
     depends_on:
       - backend
     networks:
@@ -47,15 +47,13 @@ services:
       - app-network
 
   prisma-studio:
-    image: node:20-alpine
-    working_dir: /app
-    volumes:
-      - ./backend:/app
+    build:
+      context: ./backend # Build from backend to get schema
     ports:
       - "6093:5555"
     environment:
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
-    command: sh -c "npx prisma studio --port 5555"
+    command: sh -c "npx prisma generate && npx prisma studio --port 5555"
     depends_on:
       - db
     networks:
@@ -67,4 +65,6 @@ networks:
 
 volumes:
   db-data:
+
+
 
