fix(docker): Correctly build prisma-studio service
- Configured the prisma-studio service to build from the backend context, similar to the backend service.
- This fixes a 'pull access denied' error in Portainer, as it was incorrectly trying to pull a non-existent image instead of building it locally.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,8 @@ services:
 
   prisma-studio:
     build:
-      context: ./backend # Build from backend to get schema
+      context: ./backend # Le dice a Docker/Portainer que construya desde la carpeta backend
+      dockerfile: Dockerfile
     ports:
       - "6093:5555"
     environment:
