--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+# docker-compose.yml
 version: '3.8'
 
 services:
   backend:
+    image: web-sistema-jugueria-backend-custom:latest
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -20,6 +22,7 @@ services:
       - app-network
 
   frontend:
+    image: web-sistema-jugueria-frontend-custom:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -47,6 +50,7 @@ services:
       - app-network
 
   prisma-studio:
+    image: web-sistema-jugueria-prisma-studio-custom:latest
     build:
       context: ./backend # Le dice a Docker/Portainer que construya desde la carpeta backend
       dockerfile: Dockerfile
@@ -66,6 +70,3 @@ networks:
 
 volumes:
   db-data:
-
-
-
