--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,4 +9,8 @@ server {
     location / {
         try_files $uri /index.html;
     }
+
+    location /api/ {
+        proxy_pass http://backend:5000/api/;
+    }
 }
