--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "dist/core/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node start.js",
+    "start": "node dist/core/index.js",
+    "postinstall": "npx prisma generate",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/core/index.ts",
     "prisma:migrate": "dotenv -e .env -- npx prisma migrate dev --schema=./prisma/schema.prisma",
     "prisma:migrate:reset": "dotenv -e .env -- npx prisma migrate reset --schema=./prisma/schema.prisma",
