--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - db
     networks:
       - app-network
+    command: sh -c "npx prisma generate && npm start"
 
   frontend:
     build:
@@ -54,16 +55,7 @@ services:
     environment:
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
     
-    # --- AGREGA ESTO ---
-    # Esto conecta tu carpeta real de prisma al contenedor. 
-    # Así nunca más dirá "file not found".
-    volumes:
-      - ./backend/prisma:/app/prisma
-    
-    # --- ACTUALIZA ESTO ---
-    # Usamos la ruta absoluta /app/prisma para ir a la segura
-    command: sh -c "npx prisma generate --schema=/app/prisma/schema.prisma && npx prisma studio --port 5555 --schema=/app/prisma/schema.prisma"
-    
+    command: sh -c "npx prisma generate --schema=./prisma/schema.prisma && npx prisma studio --port 5555 --schema=./prisma/schema.prisma"
     depends_on:
       - db
     networks:
