--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - db
     networks:
       - app-network
-    command: sh -c "npx prisma generate && npm start"
+    command: sh -c "npx prisma generate --schema=./prisma/schema.prisma && npm start"
 
   frontend:
     build:
