--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - db
     networks:
       - app-network
-    command: sh -c "npx prisma generate --schema=./prisma/schema.prisma && npm start"
+    command: npm start
 
   frontend:
     build:
@@ -49,13 +49,13 @@ services:
   prisma-studio:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prisma-studio
     ports:
       - "6093:5555"
     environment:
       - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}
     
-    command: sh -c "npx prisma generate --schema=./prisma/schema.prisma && npx prisma studio --port 5555 --schema=./prisma/schema.prisma"
+    command: npx prisma studio --port 5555
     depends_on:
       - db
     networks:
