--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,15 +17,20 @@ COPY prisma ./prisma
 
 # Install all dependencies
 RUN npm install
+RUN npm rebuild
 
 # Copy the rest of the application source code
 COPY . .
 
-# Generate the Prisma client
-RUN npx prisma generate
+        # Generate the Prisma client
 
-# Build the TypeScript code
-RUN npm run build
+        RUN npx prisma generate
+
+    
+
+        # Build the TypeScript code
+
+        RUN npm run build
 
 # --- 2. Pruner Stage ---
 # This stage removes devDependencies to create a clean production node_modules directory.
@@ -33,8 +38,9 @@ FROM node:20-alpine AS pruner
 
 WORKDIR /app
 
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/package-lock.json ./
+COPY --from=builder /app/package.json ./package.json
+RUN sed -i '/"postinstall": "npx prisma generate",/d' package.json
+COPY --from=builder /app/package-lock.json ./package-lock.json
 
 # Install only production dependencies
 RUN npm ci --omit=dev
@@ -57,9 +63,15 @@ COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 # Copy the built application code from the builder stage
 COPY --from=builder /app/dist ./dist
 
-# Copy other necessary files
-COPY package.json .
+# Copy package.json, package-lock.json (from pruner stage)
+COPY --from=pruner /app/package.json ./package.json
+COPY --from=pruner /app/package-lock.json ./package-lock.json
+
+# Copy schema.prisma
 COPY prisma ./prisma
+
+# Generate Prisma client in the final stage to ensure correct engine for runtime
+RUN npx prisma generate
 
 # The command to run the application
 CMD ["node", "dist/core/index.js"]
