--- a/backend/package.json
+++ b/backend/package.json
@@ -44,9 +44,8 @@
     "resend": "^6.4.2",
     "streamifier": "^0.1.1",
     "uuid": "^13.0.0",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
+    "zod": "^4.1.12",
+    "bcrypt": "^6.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
@@ -56,8 +55,9 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.2",
     "@types/otp-generator": "^4.0.2",
-    "@types/qrcode": "^1.5.6",
-    "bcrypt": "^6.0.0",
+    "@types/qrcode": "^1.5.6"
+  },
+  "devDependencies": {
     "cross-env": "^10.1.0",
     "dotenv-cli": "^11.0.0",
     "nodemon": "^3.1.10",
